# ndt_omp

./: CMakeLists.txt  package.xml
include/pclocl/: ndt_ocl.h  ndt_ocl_impl.hpp  voxel_grid_covariance_ocl.h  voxel_grid_covariance_ocl_impl.hpp
include/pclomp/: ndt_omp.h  ndt_omp_impl.hpp
kernel/: compute_derivatives.cl
src/pclocl/: ndt_ocl.cpp  voxel_grid_covariance_ocl.cpp
